<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/kernel">
        <menu>
            <group
                android:id="@+id/kernel_tweaks"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_cpu"
                    android:title="@string/cpu"
                    android:visible="true" />
                <item
                    android:id="@+id/nav_gpu"
                    android:title="@string/gpu"
                    android:visible="false" />
                <item
                    android:id="@+id/nav_core"
                    android:title="@string/core_control"
                    android:visible="false" />
                <item
                    android:id="@+id/nav_cpu_hotplug"
                    android:title="@string/cpu_hotplug"
                    android:visible="false" />
                <item
                    android:id="@+id/nav_thermal_control"
                    android:title="@string/thermal_control"
                    android:visible="false" />
                <item
                    android:id="@+id/nav_iocontrol"
                    android:title="@string/io"
                    android:visible="true" />
                <item
                    android:id="@+id/nav_cpuset"
                    android:title="@string/cpuset"
                    android:visible="false" />
            </group>
        </menu>
    </item>

    <item android:title="@string/stats">
        <menu>
            <group
                android:id="@+id/stats"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_wakelocks"
                    android:title="@string/wakelocks" />
                <item
                    android:id="@+id/nav_tis"
                    android:title="@string/time_in_state" />
            </group>
        </menu>
    </item>

    <item android:title="@string/tools">
        <menu>
            <group
                android:id="@+id/tools"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_battery_charger"
                    android:title="@string/battery_charger"
                    android:visible="false" />
                <item
                    android:id="@+id/build_prop"
                    android:title="@string/build_prop" />
                <item
                    android:id="@+id/vm"
                    android:title="@string/vm" />
            </group>
        </menu>
    </item>
    <item android:title="@string/misc" android:visible="false">
        <menu>
            <group
                android:id="@+id/misc"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:title="@string/settings" />
            </group>
        </menu>
    </item>
</menu>